--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BANGLADESH 2.0</title>
 </head>
 <body>
-    <!-- strts -->
+    <!--header section strts -->
     <header>
         <nav class="navbar">
             <div class="logo">
@@ -28,7 +28,8 @@
             <img class="banner-img" src="assets/hero.png" alt="The National Martyrs' Memorial in Savar, Bangladesh, featuring a tall, triangular concrete structure surrounded by a serene green landscape and a reflective pool">
         </div>
     </header>
-    <!-- ends -->
+    <!--header section ends -->
+    <!-- main section starts -->
      <main>
         <!--The Vision of Future section starts -->
         <section class="Future-vision">
@@ -65,6 +66,15 @@
             </div>
         </section>
         <!--The Vision of Future section ends -->
+        <!-- Quote section starts -->
+         <section class="quote-section">
+            <p>"We must ensure an environment where our young society, despite having the limitations of resources, can contribute to
+            nation-building by developing their own creativity based on merit," — At a reception for freedom fighters, November 21, 2024.</p>
+            <h4 class="cards-title">Dr. Muhammad Yunus</h4>
+            <p class="chief-adviser">Chief Adviser of the People's Republic of Bangladesh</p>
+
+         </section>
+        <!-- Quote section ends -->
         <!-- Recent-News-section-starts -->
         <section class="Recent-News">
             <h1 class="section-title">Recent News</h1>
@@ -104,7 +114,7 @@
             </div>
             <div class="box3">
                 <div class="left-box box-weight">
-                    <img class="box-img src="assets/satelite.png"
+                    <img class="box-img" src="assets/satelite.png"
                         alt="A satellite with green solar panels featuring the red and green flag of Bangladesh, orbiting Earth with a view of the planet's continents and clouds.">
                 </div>
                 <div class="rigt-box">
@@ -138,7 +148,7 @@
             </div>
          </section>
         <!-- donate section ends -->
-        <!-- my-need-support-section-starst -->
+        <!-- subscribe-section-starst -->
         <section class="subscribe-section">
             <h4 class="section-title">Subscribe Newsletter</h4>
             <p class="content-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology,  promoting inclusive
@@ -149,7 +159,7 @@
             </div>
             <p class="content-description">We promise not to spam you!</p>
         </section>
-        <!-- my-need-support-section-ends -->
+        <!-- subscribe-section-ends -->
      </main>
      <!-- main section ends -->
      <!-- footer section starts -->
