Pillars of bd added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,37 @@
     <!--header section ends -->
     <!-- main section starts -->
      <main>
+        <!-- Pillars of "Bangladesh 2.0" section starts -->
+         <section class="pillars-of-bd">
+            <h1 class="section-title">Pillars of "Bangladesh 2.0"</h1>
+            <div class="card-container">
+                <div class="item">
+                    <img src="assets/card-icon.png" alt="A glowing light bulb icon with blue atomic-like lines surrounding it, representing innovation and ideas.">
+                    <h4 class="cards-title">Innovation</h4>
+                    <p class="content-description">Innovation drives progress by transforming ideas into impactful solutions, fostering creativity, solving challenges, and
+                    improving lives across industries and society.</p>
+                </div>
+                <div class="item">
+                    <img src="assets/card-icon.png" alt="A glowing light bulb icon with blue atomic-like lines surrounding it, representing innovation and ideas.">
+                    <h4 class="cards-title">Sustainability</h4>
+                    <p class="content-description">Sustainability ensures meeting present needs without compromising future generations' ability to meet theirs, balancing
+                    environmental, economic, and social priorities.</p>
+                </div>
+                <div class="item">
+                    <img src="assets/card-icon.png" alt="A glowing light bulb icon with blue atomic-like lines surrounding it, representing innovation and ideas.">
+                    <h4 class="cards-title">Infrastructure</h4>
+                    <p class="content-description">Infrastructure refers to the fundamental physical and organizational structures, such as roads, bridges, utilities, and
+                    systems, essential for societal and economic functionality.</p>
+                </div>
+                <div class="item">
+                    <img src="assets/card-icon.png" alt="A glowing light bulb icon with blue atomic-like lines surrounding it, representing innovation and ideas.">
+                    <h4 class="cards-title">Empowerment</h4>
+                    <p class="content-description">Empowerment is the process of enabling individuals or groups to gain confidence, skills, and resources to take control
+                    of their lives.</p>
+                </div>
+            </div>
+         </section>
+        <!-- Pillars of "Bangladesh 2.0" section ends -->
         <!--The Vision of Future section starts -->
         <section class="Future-vision">
             <h1 class="section-title">The Vision of Future</h1>
@@ -68,7 +99,7 @@
         <!--The Vision of Future section ends -->
         <!-- Quote section starts -->
          <section class="quote-section">
-            <p>"We must ensure an environment where our young society, despite having the limitations of resources, can contribute to
+            <p class="quote-description">"We must ensure an environment where our young society, despite having the limitations of resources, can contribute to
             nation-building by developing their own creativity based on merit," — At a reception for freedom fighters, November 21, 2024.</p>
             <h4 class="cards-title">Dr. Muhammad Yunus</h4>
             <p class="chief-adviser">Chief Adviser of the People's Republic of Bangladesh</p>
