dummy text chenged

--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
         <!-- Recent-News-section-starts -->
         <section class="Recent-News">
             <h1 class="section-title">Recent News</h1>
-            <p class="content-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive
-            growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust
-            infrastructure, the country is set to become a global model of development.</p>
+            <p class="content-description">Bangladesh is rapidly advancing with groundbreaking initiatives in technology, renewable energy, and infrastructure
+            development. Recent projects emphasize digital transformation, sustainable growth, and innovation. With a focus on
+            inclusive progress, the nation is setting new benchmarks in modernization, aiming to position itself as a global leader
+            in development and environmental responsibility.</p>
             <div class="box1">
                 <div class="left-box box-weight">
                     <img class="box-img" src="assets/satelite.png" alt="A satellite with green solar panels featuring the red and green flag of Bangladesh, orbiting Earth with a view of the planet's continents and clouds.">
@@ -120,10 +121,9 @@
                     <h4 class="section-subtitle">Bangladesh Launches New Satellite</h4>
                     <img src="assets/al-jazeera.png" alt="al-jazeera logo">
                     <p class="content-description">Date: 05/01/2025 Time: 10.25 PM</p>
-                    <p class="content-description">Not until the creation and maintenance of decent conditions of life for all people are
-                        recognized and accepted as a
-                        common obligation of all people and all countries—not until then shall we,
-                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="content-description">Bangladesh has launched a new satellite, marking a major step in technological advancement and global connectivity. This
+                    achievement highlights the nation’s commitment to innovation, sustainable progress, and its vision for fostering
+                    inclusive development on a global scale.</p>
                     <button class="box-btn">Learn More</button>
                 </div>
             </div>
@@ -132,10 +132,9 @@
                     <h4 class="section-subtitle">Bangladesh Launches New Satellite</h4>
                     <img src="assets/al-jazeera.png" alt="al-jazeera logo">
                     <p class="content-description">Date: 05/01/2025 Time: 10.25 PM</p>
-                    <p class="content-description">Not until the creation and maintenance of decent conditions of life for all people are
-                        recognized and accepted as a
-                        common obligation of all people and all countries—not until then shall we,
-                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="content-description">Bangladesh has launched a new satellite, marking a major step in technological advancement and global connectivity. This
+                    achievement highlights the nation’s commitment to innovation, sustainable progress, and its vision for fostering
+                    inclusive development on a global scale.</p>
                     <button class="box-btn">Learn More</button>
                 </div>
                 <div class="rigt-box box-weight">
@@ -152,10 +151,9 @@
                     <h4 class="section-subtitle">Bangladesh Launches New Satellite</h4>
                     <img src="assets/al-jazeera.png" alt="al-jazeera logo">
                     <p class="content-description">Date: 05/01/2025 Time: 10.25 PM</p>
-                    <p class="content-description">Not until the creation and maintenance of decent conditions of life for all people are
-                        recognized and accepted as a
-                        common obligation of all people and all countries—not until then shall we,
-                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="content-description">Bangladesh has launched a new satellite, marking a major step in technological advancement and global connectivity. This
+                    achievement highlights the nation’s commitment to innovation, sustainable progress, and its vision for fostering
+                    inclusive development on a global scale.</p>
                     <button class="box-btn">Learn More</button>
                 </div>
             </div>
@@ -164,9 +162,9 @@
         <!-- donate section starts -->
          <section class="donate-section">
             <h1 class="section-title">Donate Today</h1>
-            <p class="content-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive
-            growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust
-            infrastructure.</p>
+            <p class="content-description">Join us in creating a positive impact by donating today. Your generous support helps empower underprivileged
+            communities, promote innovation, and drive sustainable development. Together, we can tackle pressing challenges and
+            build a brighter, more inclusive future. Every contribution matters—be part of this transformative journey!</p>
             <div class="donate-buttons">
                 <button class="donate-btn1">100 Taka</button>
                 <button class="donate-btn">200 Taka</button>
@@ -182,8 +180,8 @@
         <!-- subscribe-section-starst -->
         <section class="subscribe-section">
             <h4 class="section-title">Subscribe Newsletter</h4>
-            <p class="content-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology,  promoting inclusive
-            growth.</p>
+            <p class="content-description">Stay informed with our latest updates and inspiring stories. Subscribe to our newsletter <br> and join the journey toward
+            progress!</p>
             <div class="input-box">
                 <input type="email" name="" id="" placeholder="Enter your email here">
                 <input type="submit" value="Subscribe">
